force-app/main/default/objects/Order/fields/SBI_Notes__c.field-meta.xml
<CustomField>
    <fullName>SBI_Notes__c</fullName>
    <inlineHelpText>Description of the Special Billing Instruction for this order. Carried from the Quote. Passed to Odoo with the order to instruct the billing team on invoicing requirements.</inlineHelpText>
    <label>SBI Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>