force-app/main/default/objects/Order/fields/SBI_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>SBI_Review_Status__c</fullName>
    <inlineHelpText>Finance review status for the Special Billing Instruction on this order. Order cannot be activated while Pending Finance Review. Updated by Country Finance.</inlineHelpText>
    <label>SBI Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Reviewed</fullName>
                <default>true</default>
                <label>Not Reviewed</label>
            </value>
            <value>
                <fullName>Pending Finance Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>