force-app/main/default/objects/Order/fields/Target_Site__c.field-meta.xml
<CustomField>
    <fullName>Target_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the canonical Site__c record for this order. Replaces the Operation_Site__c picklist. Drives integration routing via Site_Code__c and Odoo_Site__mdt.</description>
    <inlineHelpText>The Digital Edge site where services under this order are delivered.</inlineHelpText>
    <label>Operation Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>