force-app/main/default/objects/Order/fields/Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Termination_Date__c</fullName>
    <inlineHelpText>The date customer service is terminated. Required for Churn and Partial Churn orders. Passed to Odoo to stop billing from this date.</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>