force-app/main/default/objects/Order/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <formula>Total_MRC__c * Contract_Term_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total MRC multiplied by Contract Term in months. Auto-calculated. Excludes NRC. Used for revenue reporting and commission tracking. Read-only.</inlineHelpText>
    <label>Total Contract Value (TCV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>