force-app/main/default/objects/Order/fields/Total_MRC__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC__c</fullName>
    <inlineHelpText>Sum of all recurring monthly charges across order lines. Auto-calculated from line items. Used for TCV calculation and revenue reporting. Read-only.</inlineHelpText>
    <label>Total MRC (Order)</label>
    <summarizedField>OrderItem.MRC_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Charge_Type__c</field>
        <operation>equals</operation>
        <value>MRC</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>