force-app/main/default/objects/Order/fields/Total_NRC__c.field-meta.xml
<CustomField>
    <fullName>Total_NRC__c</fullName>
    <inlineHelpText>Sum of all one-time charges across order lines flagged as NRC. Auto-calculated from line items. Used for billing and finance reporting. Read-only.</inlineHelpText>
    <label>Total NRC (Order)</label>
    <summarizedField>OrderItem.MRC_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.Charge_Type__c</field>
        <operation>equals</operation>
        <value>NRC</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>