force-app/main/default/objects/Order/validationRules/VR_ORD_01_BAN_Lock_PostConfirm.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ORD_01_BAN_Lock_PostConfirm</fullName>
    <active>true</active>
    <description>VR-ORD-01: BAN cannot be changed once Order is Confirmed.</description>
    <errorConditionFormula>AND(ISCHANGED(BillingAccount__c), NOT(ISPICKVAL(Status, &apos;Draft&apos;)), NOT(ISPICKVAL(Status, &apos;Submitted&apos;)), NOT(ISPICKVAL(Status, &apos;Cancelled&apos;)))</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>The BAN cannot be changed once the Order has been Confirmed.</errorMessage>
</ValidationRule>