force-app/main/default/objects/Order/validationRules/VR_ORD_03_OrderType_Lock_PostDraft.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_ORD_03_OrderType_Lock_PostDraft</fullName>
    <active>true</active>
    <description>VR-ORD-03: Order Type is immutable after the Order has been submitted.</description>
    <errorConditionFormula>AND(NOT(ISPICKVAL(Status, &apos;Draft&apos;)), NOT(ISPICKVAL(Status, &apos;Cancelled&apos;)), ISCHANGED(Order_Type__c))</errorConditionFormula>
    <errorDisplayField>Order_Type__c</errorDisplayField>
    <errorMessage>Order Type is immutable after the Order has been submitted.</errorMessage>
</ValidationRule>