force-app/main/default/objects/Order/listViews/All_Change_Orders.listView-meta.xml
<ListView>
    <fullName>All_Change_Orders</fullName>
    <columns>Order_No__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Original_Order__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Order_Type__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <filters>
        <field>Order_Type__c</field>
        <operation>equals</operation>
        <value>Change/Upsell</value>
    </filters>
    <label>All Change Orders</label>
</ListView>