force-app/main/default/objects/Order/listViews/AllActivatedOrders.listView-meta.xml
<ListView>
    <fullName>AllActivatedOrders</fullName>
    <columns>Order_No__c</columns>
    <columns>Order_Number__c</columns>
    <columns>ORDERS.CREATED_DATE</columns>
    <columns>Order_Type__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>All Activated Orders</label>
</ListView>